--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Hannah Wu",
   "license": "ISC",
   "devDependencies": {
+    "file-loader": "^6.1.1",
     "lite-server": "^2.5.4",
     "ts-loader": "^8.0.6",
     "typescript": "^4.0.3",
