--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "author": "Hannah Wu",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^5.0.0",
     "file-loader": "^6.1.1",
     "lite-server": "^2.5.4",
+    "style-loader": "^2.0.0",
     "ts-loader": "^8.0.6",
     "typescript": "^4.0.3",
     "webpack": "^4.32.2",
@@ -24,6 +26,9 @@
     "webpack-dev-server": "^3.5.1"
   },
   "dependencies": {
-    "axios": "^0.21.0"
+    "axios": "^0.21.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "^4.5.0",
+    "progressive-image.js": "^1.6.0"
   }
 }
