--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server",
-    "build": "webpack"
+    "build": "webpack --config webpack.config.prod.js"
   },
   "keywords": [
     "typescript",
@@ -26,9 +26,13 @@
     "webpack-dev-server": "^3.5.1"
   },
   "dependencies": {
+    "autocompleter": "^6.0.5",
     "axios": "^0.21.0",
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^4.5.0",
-    "progressive-image.js": "^1.6.0"
+    "mini-css-extract-plugin": "^1.2.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "progressive-image.js": "^1.6.0",
+    "terser-webpack-plugin": "^4.2.3"
   }
 }
