--- a/package.json
+++ b/package.json
@@ -15,9 +15,15 @@
   "author": "Hannah Wu",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.1",
     "css-loader": "^5.0.0",
     "file-loader": "^6.1.1",
+    "install": "^0.13.0",
     "lite-server": "^2.5.4",
+    "npm": "^6.14.8",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.6",
     "typescript": "^4.0.3",
@@ -26,6 +32,7 @@
     "webpack-dev-server": "^3.5.1"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "autocompleter": "^6.0.5",
     "axios": "^0.21.0",
     "clean-webpack-plugin": "^3.0.0",
